# novelWriter

./: .codecov.yml  .flake8  .gitignore  .packit.yml  .readthedocs.yml  .travis.txt  .travis.yml  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CREDITS.md  LICENSE.md  MANIFEST.in  Pipfile  README.md  ToDo.md  codecov.yml  crowdin.yml  dependencies.txt  install.py  make.py  make_windows.py  novelWriter.pro  novelWriter.py  novelWriter.pyw  pkgutils.py  pyproject.toml  pytest.ini  requirements-all.txt  requirements-dev.txt  requirements.txt  run_tests.py  setup.cfg  setup.py  setup_windows.bat  win_install.bat
.github/: FUNDING.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug-report.md  bug_report.md  feature-request.md
.github/workflows/: build-macos-dmg-py2app.yaml  build-macos-dmg-pyinstaller.yaml  build.yml  build_all.yml  build_appimage.yml  build_assets.yml  build_linux.yml  build_mac.yml  build_macos.yml  build_win.yml  build_win_launcher.yml  codeql.yml  i18n.yml  lock_threads.yml  part_appimage.yml  part_assets.yml  part_macos_amd64.yml  part_macos_m1.yml  part_win_x64.yml  pytest_3_6.yml  pytest_3_7.yml  pytest_3_8_cov.yml  pytest_3_9.yml  pytest_cov.yml  pytest_mac_3_8.yml  pytest_win_3_8.yml  syntax.yml  test_fedora.yml  test_linux.yml  test_linux_3.6.yml  test_linux_3.7.yml  test_linux_3.8.yml  test_linux_3.9.yml  test_mac.yml  test_ubuntu.yml  test_win.yml
assets/: installDebian.sh  installUbuntu.sh  novelwriter.desktop
assets/mime/: x-novelwriter-project.xml
docs/: FileFormatSpec-1.5.fodt  FileFormatSpec-1.5.rst  requirements.txt  vim-mode.md
docs/markdown/: style.md
docs/source/: _outtakes.rst  conf.py  export.rst  export.txt  howto.rst  index.rst  index.txt  int_customise.rst  int_glossary.rst  int_howto.rst  int_interface.rst  int_introduction.rst  int_overview.rst  int_source.rst  int_started.rst  int_typography.rst  int_windows.rst  interface.rst  interface.txt  introduction.rst  introduction.txt  more_counting.rst  more_customise.rst  more_projectformat.rst  notes.rst  notes.txt  project_export.rst  project_manuscript.rst  project_notes.rst  project_overview.rst  project_references.rst  project_story.rst  project_structure.rst  projects.rst  projects.txt  requirements.txt  setup_linux.rst  setup_mac.rst  setup_other.rst  setup_windows.rst  (+30 more)
flatpak/: generate-pypi-deps-json.sh
help/en_GB/: index.html
i18n/: README.md  dummy_qtbase.py  nw_base.ts  nw_ca_ES.ts  nw_cs_CZ.ts  nw_de_DE.ts  nw_en_US.ts  nw_es_419.ts  nw_fr.ts  nw_fr_FR.ts  nw_it_IT.ts  nw_ja_JP.ts  nw_nb-NO.ts  nw_nb_NO.ts  nw_nl_NL.ts  nw_nn_NO.ts  nw_pl_PL.ts  nw_pt.qm  nw_pt.ts  nw_pt_BR.ts  nw_ru_RU.ts  nw_zh_CN.ts  phrases_pt.qph  project_en.json  project_nb_NO.json  project_pt.json  qtbase.py
i18n/pylupdate6/: README.md  __init__.py  lupdate.py  python_source.py  source_file.py  translation_file.py  translations.py  user.py
launcher/windows/: launcher.rc  main.cpp
lib/text/: analyse.py
macos/: App.entitlements  Info.plist  Info.plist.in  build.sh  generate_icns.sh  generate_plist.py
novelwriter/: __init__.py  alert.py  common.py  config.py  constants.py  custom.py  enum.py  error.py  guimain.py  logging.py  shared.py  splash.py  types.py
novelwriter/core/: __init__.py  auto_complete.py  buildsettings.py  coretools.py  docbuild.py  doctools.py  document.py  index.py  indexdata.py  indexmodel.py  item.py  itemmodel.py  novelmodel.py  options.py  project.py  projectdata.py  projectsearch.py  projectxml.py  sessions.py  spellcheck.py  status.py  storage.py  tohtml.py  tokenizer.py  tomarkdown.py  tomd.py  toodt.py  toqdoc.py  toqdocument.py  tree.py
novelwriter/custom/: configlayout.py  pagedsidebar.py
novelwriter/dialogs/: __init__.py  about.py  docmerge.py  docsplit.py  editlabel.py  itemeditor.py  pastedialog.py  preferences.py  projdetails.py  projectsettings.py  projload.py  projsettings.py  quotes.py  updates.py  wordlist.py
novelwriter/editor/: autoreplace.py  completer.py  documentcache.py  editfooter.py  editheader.py  editor.py  editordocument.py  editsearch.py  edittoolbar.py  footer.py  header.py  highlighter.py  history.py  hovercard.py  runnables.py  textblock.py  viewer.py  viewerpanel.py
novelwriter/extensions/: __init__.py  circularprogress.py  configlayout.py  eventfilters.py  expandpanel.py  modified.py  novelselector.py  pageddialog.py  pagedsidebar.py  progressbars.py  simpleprogress.py  statusled.py  switch.py  switchbox.py  versioninfo.py  wheeleventfilter.py
nw/: __init__.py  common.py  config.py  constants.py  enum.py  error.py  guimain.py  main.py  theme.py
sample/: ToC.json  ToC.txt  nwProject.nwx
setup/: BUILD.md  README.md  appimage_launcher.sh  description_pypi.md  description_short.txt  installDebianUbuntu.sh  iss_license.txt  launchpad_setup.cfg  long_description.md  make_clean.sh  make_pip.sh  make_release.sh  make_snapshot.sh  novelwriter.appdata.xml  novelwriter.desktop  requirements.txt  setup_windows.bat  uninstall_windows.bat  win_setup.iss  win_setup_embed.iss  win_setup_exe.iss  win_setup_pyz.iss  windows_install.bat  windows_uninstall.bat
tests/: README.md  conftest.py  dummy.py  helpers.py  mock.py  mocked.py  nwdummy.py  nwtools.py  profilestats.py  requirements.txt  test_base_common.py  test_base_config.py  test_base_error.py  test_base_init.py  test_common.py  test_config.py  test_core_document.py  test_core_index.py  test_core_item.py  test_core_options.py  test_core_project.py  test_core_spell.py  test_core_status.py  test_core_tohtml.py  test_core_tokenizer.py  test_core_tools.py  test_core_tree.py  test_dialogs.py  test_error.py  test_gui.py  test_gui_about.py  test_gui_build.py  test_gui_dialogs.py  test_gui_doceditor.py  test_gui_docviewer.py  test_gui_itemeditor.py  test_gui_main.py  test_gui_mainmenu.py  test_gui_mergesplit.py  test_gui_noveltree.py  (+19 more)
utils/: assets.py  build_appimage.py  build_binary.py  build_debian.py  build_flatpak.py  build_windows.py  common.py  docs.py  font_awesome.json  icon_themes.py  material_icons.py  material_symbols.json  remix.json
(+1247 files in other folders)
