[metadata]
name = novelWriter
version = attr: nw.__version__
author = Veronica Berglyd Olsen
author_email = code@vkbo.net
description = A markdown-like document editor for writing novels
url = https://novelwriter.io
long_description = file: README.md
long_description_content_type = text/markdown
license_file = LICENSE.md
license = GNU General Public License v3
classifiers =
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: Implementation :: CPython
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Development Status :: 5 - Production/Stable
    Operating System :: OS Independent
    Intended Audience :: End Users/Desktop
    Natural Language :: English
    Topic :: Text Editors
python_requires = >=3.6
project_urls =
    Bug Tracker = https://github.com/vkbo/novelWriter/issues
    Documentation = https://github.com/vkbo/novelWriter/issues
    Source Code = https://github.com/vkbo/novelWriter

[options]
include_package_data = True
packages = find:
install_requires =
    pyqt5>=5.2.1
    lxml>=4.2.0
    pyenchant>=3.0.0

[options.packages.find]
exclude = docs, tests, sample

[options.entry_points]
console_script =
    novelWriter-cli = nw:main
gui_scripts =
    novelWriter = nw:main

[bdist_wheel]
universal = 0

[flake8]
ignore = E203,E221,E226,E228,E241,E251,E261,E266,E302,E305
max-line-length = 99
exclude = docs/*
